--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+}
+.game__home__wrapper > form {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 50%;
+  border: 1px solid #d7d7d7;
+  margin: 20px auto;
+  padding: 40px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  width: 160px;
+  height: 44px;
+  cursor: pointer;
+}
+
+.mono_input {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  gap: 10px;
+}
+
+.mono_input > label {
+  text-align: left;
+}
+
+.mono_input > input {
+  width: 200px;
+  padding: 5px 10px;
+}
+
+.score_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border: 1px solid #d7d7d7;
+  margin: 20px auto;
+  padding: 20px;
+  width: 90%;
+}
+
+.score_container > p {
+  font-size: 16px;
+  font-weight: 500;
+  text-align: left;
+}
+
+.single_player_score {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
+.single_player_score > span {
+  padding: 5px 10px;
+  background-color: #e5e5e5;
+  color: #000;
 }
